camel-quarkus-ws-to-event/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot
  namespace: kafka-camel
spec:
  selector:
    camel.apache.org/integration: chat-controller-route
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
